<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <EditText
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_item_hint"
        android:id="@+id/etItem"
        android:inputType="text"/>


    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <Spinner
            android:id="@+id/spCategories"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/et_price_hint"
            android:id="@+id/etPrice"
            android:inputType="number"/>

    </LinearLayout>

    <EditText
        android:id="@+id/etDescription"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_description_hint"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLength="2000"
        android:maxLines="4"/>

    <Button
        android:id="@+id/btnAddItem"
        android:layout_margin="10dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Save Item"/>

</LinearLayout>